--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,3 +1,7 @@
-<h1>Login</h1>
-<p>Login in to out awesome app AVI!</p>
-
+<h1>Register as a New User</h1>
+<%=form_for @user do |f|%> 
+<%=f.text_field :name, placeholder:"name" %>
+<%=f.email_field :email, placeholder:"email" %>
+<%=f.password_field :password, placeholder:"password" %>
+<%=f.submit "Register" %>
+<%end%>
