--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 <ul>
   <% @products.each do |p|%>
     <li> <%= p.name %> </li>
-    <li> <%= p.expiration %> </li>
+    <li> <%= p.expiration_date %> </li>
   <% end %> 
 </ul>
   
