--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,2 +1,16 @@
-<h1>Products#new</h1>
-<p>Find me in app/views/products/new.html.erb</p>
+<h1>Add new items to my list</h1>
+ 
+<%= form_for @product,url: {action: "create"}, html: {class: "new_form"} do |f| %>
+  <%= f.label :name %>:
+  <%= f.text_field :name %>
+
+  <%= f.label :expiration_date %>
+  <%= f.text_field :expiration_date %>
+
+  <%= link_to "Cancel", root_path %>
+  <%= f.submit "Create" %>
+<% end %>
+
+
+
+
