--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,6 @@
 <h1><%= @product.name %> </h1>
-<p>Find me in app/views/products/show.html.erb</p>
+<p>Date Added : <%= @product.created_at %> </p>
+<p>Expiration Date : <%= @product.expiration_date %></p>
+<%= link_to "Back", root_path %>
+<%= link_to "Edit", edit_product_path %>
+<!--<%= link_to "Delete Item", product_path(@product), method: "delete" %> -->
