--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,15 @@
-<h1>User Products</h1>
-
-<p> List of items </p>
+<h1>Products Directory</h1>
+<% if flash[:notice] %>
+  <div class="notice"><%= flash[:notice] %></div>
+<% end %>
+<p> List of Items </p>
 <ul>
   <% @products.each do |product|%>
-    <li> <a href="/products/<%= product.id %>"><%= product.name %> </a> </li>
+    <li> <a href="/products/<%= product.id %>">
+      <%= product.name %> </a> </li>
     <!--<li> <%= product.expiration_date %> </li> -->
   <% end %> 
+</br>
 <%= link_to "Add Item", new_product_path %>
 </ul>
   
