--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<h1> Search Results </h1>
+<% @products.each do |product| %>
+  <div class="product">
+    <h1 class="product-name"><%= link_to product.name, product_path(product) %></h1>
+    <p class="product-expiration_date"><%= product.expiration_date %></p>
+  </div>
+<% end %>
