--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,8 +1,15 @@
 <h1><%= @product.name %> </h1>
 
+<%= form_for @product, url: {action: "update"}, html: {class: "update_form"} do |f| %>
+
 <p>Date Added : <%= @product.created_at %> </p>
-<p>Expiration Date : <%= @product.expiration_date %></p>
+<p>Name : <%= @product.name %></p>
+
+<%= f.label :expiration_date%>
+<%= f.text_field :expiration_date%>
+
 <%= link_to "Back", product_path %>
-<%= link_to "Update Item", product_path(@product), method: "update" %> 
+<%= f.submit "Update Item" %> 
 <%= link_to "Delete Item", product_path(@product), method: "delete" %>
  
+ <% end %>
