--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -5,8 +5,8 @@
 <p>Date Added : <%= @product.created_at %> </p>
 <p>Name : <%= @product.name %></p>
 
-<%= f.label :expiration_date%>
-<%= f.text_field :expiration_date%>
+<%= f.label :time%>
+<%= f.text_field :time%>
 
 <%= link_to "Back", product_path %>
 <%= f.submit "Update Item" %> 
