--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -10,8 +10,8 @@
   <%= f.label :name %>:
   <%= f.text_field :name %>
 
-  <%= f.label :expiration_date %>
-  <%= f.text_field :expiration_date %>
+  <%= f.label :time %>
+  <%= f.text_field :time %>
 
   <%= link_to "Cancel", root_path %>
   <%= f.submit "Create" %>
