--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @product.name %> </h1>
 <p>Date Added : <%= @product.created_at %> </p>
-<p>Expiration Date : <%= @product.expiration_date %></p>
+<p>Expiration Date : <%= @product.time %></p>
 <%= link_to "Back", root_path %>
 <%= link_to "Edit", edit_product_path %>
 <!--<%= link_to "Delete Item", product_path(@product), method: "delete" %> -->
