--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,14 @@
+
+<h1>Here is an autofill box</h1>
+<%= form_for(@product) do |f|%>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+<% end %>
+
+
+
+
+
 <h1>Add new items to my list.</h1>
 
 <%= form_tag(products_path, :method => "get", class: "navbar-form", id: "search-form") do %>
