--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -8,8 +8,17 @@
 <%= f.label :time%>
 <%= f.text_field :time%>
 
+<%= f.label :storage%>
+<%= f.text_field :storage%>
+
+
 <%= link_to "Back", product_path %>
 <%= f.submit "Update Item" %> 
-<%= link_to "Delete Item", product_path(@product), method: "delete" %>
- 
+
  <% end %>
+
+ <%= button_to "Delete Item", product_path(@product), method: "delete" %>
+ 
+
+
+
