--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
   <title>Perishab.ly</title>
+  <%= csrf_meta_tag %>
+  <%= javascript_include_tag "application" %>
 </head>
 <body>
  
