--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,5 +3,5 @@
 <p>Expiration Date : <%= @product.time %></p>
 <p>Storage Type : <%= @product.storage %></p>
 <%= link_to "Back", root_path %>
-<%= link_to "Edit", edit_product_path %>
-<!--<%= link_to "Delete Item", product_path(@product), method: "delete" %> -->
+<%= link_to "Edit", edit_product_path(@product) %>
+<%= link_to 'Destroy', @product, :confirm => 'Are you sure?', :method => :delete %>
