--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
   <title>Perishab.ly</title>
   <%= csrf_meta_tag %>
   <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag "application" %>
 </head>
 <body>
- 
   <%= yield %>
 </body>
