--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,17 @@
   <title>Perishab.ly</title>
 </head>
 <body>
- 
+  <div id = "container">
+    <div id = "user_header">
+     <% if current_user %> 
+     Logged in as <%= current_user.email %>
+     <%= link_to "Log out", logout_path %>
+     <% else %>
+    <%= link_to "Sign Up", signup_path %> or
+    <%= link_to "Log In", login_path %>
+</div>
+<% flash.each do |name, message| %>
+  <%= content_tag :div, msg, :id "flash_#{name}" %>
+  <% end %>
   <%= yield %>
 </body>
