--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>User's List</h1>
+<!-- <h1>User's List</h1>
 <% if flash[:notice] %>
   <div class="notice"><%= flash[:notice] %></div>
 <% end %>
@@ -11,5 +11,5 @@
   <% end %> 
 </br>
 <%= link_to "Add Item", new_product_path %>
-</ul>
+</ul> -->
   
