--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -18,7 +18,7 @@
   <%= f.label :storage, "Storage:" %>
   <%= f.text_field :storage %>
 
-  <%= link_to "Cancel", root_path %>
+  <%= link_to "Cancel", products_path %>
   <%= f.submit "Create" %>
 <% end %>
 
