--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,6 +2,6 @@
 <p>Date Added : <%= @product.created_at %> </p>
 <p>Expiration Date : <%= @product.time %></p>
 <p>Storage Type : <%= @product.storage %></p>
-<%= link_to "Back", root_path %>
+<%= link_to "Back", products_path %>
 <%= link_to "Edit", edit_product_path(@product) %>
 <%= link_to 'Destroy', @product, :confirm => 'Are you sure?', :method => :delete %>
