--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,12 @@
     <!--<li> <%= product.time %> </li> -->
   <% end %> 
 </br>
+<%= form_tag(products_path, :method => "get", class: "navbar-form", id: "search-form") do %>
+  <div class="input-append">
+    <%= text_field_tag :search, params[:search], class: "span2", placeholder: "Search Products" %>
+    <button class="btn" type="submit"><i class="btn"></i>Submit</button>
+  </div></br>
+<% end %>
 <%= link_to "Add Item", new_product_path %>
 </ul>
   
