--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Sign Up</h1>
 
-<%= form_for(@user) do |f| %>
+
+<%= form_for(@user, :html => {:class => 'signup_form'}) do |f| %>
 
   <div class="field">
     <%= f.label :name %><br>
@@ -24,5 +25,7 @@
   
 
   <%= f.submit %>
-  <%= link_to "Log In", login_path %>
+  
 <% end %>
+
+<%= link_to "Log In", login_path %>
