--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
-<head>
-  <title>Perishab.ly</title>
-  <%= csrf_meta_tag %>
-  <%= javascript_include_tag "application" %>
-  <%= stylesheet_link_tag "application" %>
-</head>
-<body>
-  <div id = "container">
-    <div id = "user_header">
-     <% if current_user %> 
-      Logged in as <%= current_user.email %>
-      <%= link_to "Log out", logout_path %>
-    <% end %>
-    </div>
-  </div>
-  <%= render "layouts/flash_notices" %>
+<html>
+  <head>
+    <title>Perishab.ly</title>
+    <%= csrf_meta_tag %>
+    <%= javascript_include_tag "application" %>
+    <%= stylesheet_link_tag "application", :media => "all" %>
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+  </head>
   
-  <%= yield %>
+  <body>
+    <div id = "container" class="row-fluid borBox inBox well deep">
+      <div id = "user_header">
+        <% if current_user %> 
+          <div class ="navbar navbar-fixed-top">
+            Logged in as <%= current_user.email %>
+            <%= link_to "Log out", logout_path %>
+          </div>
+        <% end %>
+      </div>
+    <h2>Perishab.ly</h2>
+    <%= render "layouts/flash_notices" %>
+    
+    <%= yield %>
+    </div>
+  <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 
-</body>
+  </body>
+</html>
