--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,27 +4,27 @@
 <%= form_for(@user, :html => {:class => 'signup_form'}) do |f| %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br>
+    <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
 
   <div class="field">
-    <%= f.label :password %><br>
+    <%= f.label :password %>
     <%= f.password_field :password %>
   </div>
     
    <div class="field">
-    <%= f.label :password_confirmation %><br>
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
   </div> 
   
   <div class="field">
-    <%= f.label :phone_number %><br>
+    <%= f.label :phone_number %>
     <%= f.telephone_field :phone_number %>
   </div>
 
