--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,8 +1,8 @@
 
-<h1>Add new items to my list.</h1>
+<h1>Add items to my list.</h1>
 <%= form_for(@product) do |f|%>
     <%= f.label :name %><br />
-    <%= f.text_field :name, data: {autocomplete_source: Product.all.order(:name).map(&:name)} %>
+    <%= f.text_field :name, data: {autocomplete_source: Product.all.order(:name).map(&:name)} %><br />
     <%= f.label :time %><br />
     <%= f.text_field :time %>
     <%= link_to "Cancel", root_path %>
