Got the time to come up in the text field after the user selects the product. About to rename products user_added_products in some cases.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
-<!-- <h1>User's List</h1>
+<!-- don't need to change this at all. 
+<h1>User's List</h1>
 <% if flash[:notice] %>
   <div class="notice"><%= flash[:notice] %></div>
 <% end %>
