Working on time expiration date converter.

--- a/app/views/user_added_products/new.html.erb
+++ b/app/views/user_added_products/new.html.erb
@@ -16,8 +16,13 @@
   <%= f.label :product_details, "Product Details:" %>
   <%= f.text_field :product_details %>
 
-  <%= f.label :length_of_time, "Length of Time:" %>
-  <%= f.text_field :length_of_time %>
+
+  <%= f.label :number_unit_of_time, "Num Time:" %>
+  <%= f.select(:number_unit_of_time, options_for_select(1..7)) %> 
+
+  <%= f.label :unit_of_time_period, "Unit of Time:" %>
+  <%= f.select(:unit_of_time_period, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %> 
+
   
   <%= f.label :storage, "Storage:" %>
   <%= f.text_field :storage %>
