--- a/app/views/user_added_products/show.html.erb
+++ b/app/views/user_added_products/show.html.erb
@@ -1,9 +1,12 @@
 <h1><%= @user_product.brand %> </h1>
 <p>Date Added : <%= @user_product.created_at %> </p>
-<p>Length of Time: <%= @user_product.length_of_time %></p>
+<p>Time of Exp: <%= @user_product.number_unit_of_time %> <%= @user_product.unit_of_time_period %></p>
 <p>Storage Type : <%= @user_product.storage %></p>
 <p>Brand: <%= @user_product.brand %></p>
-<p>Expiration Date : <%= @user_product.exp_date%></p>
+<p>Product Details: <%= @user_product.product_details %></p>
+
+<p>Expiration Date : <%= @exp_date %></p>
+
 <p>Notify Me By : <%= @user_product.exp_date%></p>
 <%= link_to "Back", user_added_products_path %>
 <%= link_to "Edit", edit_user_added_product_path(@user_product) %>
