--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,21 +9,20 @@
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
   </head>  
   <body>
-    <div id = "container">
+    <div id = "container" class= "container-fluid">
       <div id = "user_header">
         <% if current_user %> 
           <div class ="navbar navbar-fixed-top">
             <div class ="navbar-inner">
               Logged in as <%= current_user.email %>
               <div class="pull-right">
-                <%= link_to "Log out", logout_path, class: "btn btn-info" %>
+                <%= link_to "SIGN OUT", logout_path, class: "btn btn-info" %>
               </div>
             </div>
           </div>
         <% end %>
-      </div>
+      </div> 
     
-    <%= render "layouts/flash_notices" %>
     
     <%= yield %>
     </div>
