--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,6 @@
     <%= csrf_meta_tag %>
     <%= javascript_include_tag "application" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= stylesheet_link_tag 'font-awesome.min.css' %>
-    <link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
   </head>  
   <body>
     <div id = "container" class= "container-fluid">
@@ -14,9 +12,10 @@
         <% if current_user %> 
           <div class ="navbar navbar-fixed-top">
             <div class ="navbar-inner">
+              <h2> PERISHAB.LY </h2>
               Logged in as <%= current_user.email %>
-              <div class="pull-right">
-                <%= link_to "SIGN OUT", logout_path, class: "btn btn-info" %>
+              <div class="pull-right clearfix:after">
+                <%= link_to "SIGN OUT", logout_path, class: "btn btn-inverse round2" %>
               </div>
             </div>
           </div>
@@ -26,6 +25,5 @@
     
     <%= yield %>
     </div>
-
   </body>
 </html>
