--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,7 +31,7 @@
       <%= f.telephone_field :phone_number %>
     </div>
 
-    <%= f.submit "SIGN UP!", :class => "btn btn-info"%>
+    <%= f.submit "Sign up", :class => "btn btn-info round2"%>
     
   <% end %>
 
