--- a/app/views/user_added_products/show.html.erb
+++ b/app/views/user_added_products/show.html.erb
@@ -1,6 +1,6 @@
-<h1><%= @user_product.brand %> </h1>
+<h1><%= @user_product.name %> </h1>
 
-<p>Brand: <%= @user_product.brand %></p>
+<p>Name: <%= @user_product.name %></p>
 <p>Time of Exp: <%= @user_product.number_unit_of_time %> <%= @user_product.unit_of_time_period %></p>
 <p>Storage Type : <%= @user_product.storage %></p>
 <p>Product Details: <%= @user_product.product_details %></p>
