working on edit form and notification date

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,10 @@
         <% end %>
       </div> 
     
-    
-    <%= yield %>
+      <div class="deep well">
+        
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
