--- a/app/views/user_added_products/show.html.erb
+++ b/app/views/user_added_products/show.html.erb
@@ -6,7 +6,6 @@
 <p>Product Details: <%= @user_product.product_details %></p>
 <p>Date Added : <%= @user_product.created_at %> </p>
 <p>Expiration Date : <%= @user_product.exp_date %></p>
-<<<<<<< HEAD
 
 <p>Notify Me <%= @user_product.exp_date%></p>
 <p>Notify Friends <%= @user_product.exp_date%></p>
@@ -21,17 +20,23 @@
   <%= f.submit %>
 <% end %>
 
-=======
+  <div class ="light well">
 
-<p>Notification Date : <%= @user_product.notification_date %></p>
+    <h1><%= @user_product.brand %> </h1>
 
-<%= select_tag(:notify_num, '<option value="1">Lisbon</option>...') %>
+    <p>Brand: <%= @user_product.brand %></p>
+    <p>Time of Exp: <%= @user_product.number_unit_of_time %> <%= @user_product.unit_of_time_period %></p>
+    <p>Storage Type : <%= @user_product.storage %></p>
+    <p>Product Details: <%= @user_product.product_details %></p>
+    <p>Date Added : <%= @user_product.created_at %> </p>
+    <p>Expiration Date : <%= @user_product.exp_date %></p>
+    <p>Notification Date : <%= @user_product.notification_date %></p>
 
-<div class="progress progress-striped active">
-  <div class="bar" style="width: 80%;"></div>
-</div>
+    <div class="progress progress-striped active">
+      <div class="bar" style="width: 80%;"></div>
+    </div>
 
->>>>>>> abaad26... working on notification day and form
 <%= link_to "Back", user_added_products_path %>
 <%= link_to "Edit", edit_user_added_product_path(@user_product) %>
 <%= link_to 'Destroy', @user_product, :confirm => 'Are you sure?', :method => :delete %>
+
