--- a/app/views/user_added_products/show.html.erb
+++ b/app/views/user_added_products/show.html.erb
@@ -5,9 +5,11 @@
 <p>Storage Type : <%= @user_product.storage %></p>
 <p>Product Details: <%= @user_product.product_details %></p>
 <p>Date Added : <%= @user_product.created_at %> </p>
-<p>Expiration Date : <%= @exp_date %></p>
+<p>Expiration Date : <%= @user_product.exp_date %></p>
 
 <p>Notify Me <%= @user_product.exp_date%></p>
+<p>Notify Friends <%= @user_product.exp_date%></p>
+
 <%= link_to "Back", user_added_products_path %>
 <%= link_to "Edit", edit_user_added_product_path(@user_product) %>
 <%= link_to 'Destroy', @user_product, :confirm => 'Are you sure?', :method => :delete %>
