Friend notification working, just need to set it up now for group

--- a/app/views/user_added_products/show.html.erb
+++ b/app/views/user_added_products/show.html.erb
@@ -10,6 +10,16 @@
 <p>Notify Me <%= @user_product.exp_date%></p>
 <p>Notify Friends <%= @user_product.exp_date%></p>
 
+<%= form_for(@friend) do |f| %>
+  <%= f.hidden_field :user_id, :value => current_user.id %>
+  <%= f.hidden_field :user_added_product_id, :value => @user_product.id %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  <%= f.label :email %>
+  <%= f.text_field :email %>
+  <%= f.submit %>
+<% end %>
+
 <%= link_to "Back", user_added_products_path %>
 <%= link_to "Edit", edit_user_added_product_path(@user_product) %>
 <%= link_to 'Destroy', @user_product, :confirm => 'Are you sure?', :method => :delete %>
