--- a/app/views/user_added_products/edit.html.erb
+++ b/app/views/user_added_products/edit.html.erb
@@ -1,54 +1,58 @@
-<h1><%= @user_product.name %> </h1>
+<h1><i class="fa fa-pencil-square-o"></i>&nbsp;<%= @user_product.name %> </h1>
 
 <%= form_for @user_product, url: {action: "update"}, html: {class: "update_form"} do |f| %>
   <p>Date Added : <%= @user_product.created_at %> </p>
   
+  <div class = "light well">
   
-  <%= f.label :name %>
-  <%= f.text_field :name%>
+    <%= f.label :name %>
+    <%= f.text_field :name%>
 
-  <%= f.label :product_details %>
-  <%= f.text_field :product_details %>
+    <%= f.label :product_details %>
+    <%= f.text_field :product_details %>
 
-  
-  <%= f.label :number_unit_of_time, "Num Time:" %>
-  <%= f.select(:number_unit_of_time, options_for_select(1..7)) %> 
+    
+    <%= f.label :number_unit_of_time, "Num Time:" %>
+    <%= f.select(:number_unit_of_time, options_for_select(1..7)) %> 
 
-  <%= f.label :unit_of_time_period, "Unit of Time:" %>
-  <%= f.select(:unit_of_time_period, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %>
-  
-  <%= link_to 'My product has an expiration date', '#',
-        :onclick => 'select_exp_date()' %>
+    <%= f.label :unit_of_time_period, "Unit of Time:" %>
+    
+    <%= f.select(:unit_of_time_period, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %> <br>
+    
+     <%= link_to 'My product has an expiration date', '#',
+          :onclick => 'add_ppl_to_notification()' %>
 
-  <%= f.label :storage%>
-  <%= f.text_field :storage%>
+    <%= f.label :storage%>
+    <%= f.text_field :storage%>
 
-  <p> Notify by: </p>
-  
-  <%= radio_button_tag(:notify_by, "email") %>
-  <%= label_tag(:notify_by_email, "Email") %>
-  <%= radio_button_tag(:notify_by, "text") %>
-  <%= label_tag(:notify_by_text, "Text") %>
-  <%= radio_button_tag(:notify_by, "Phone Call") %>
-  <%= label_tag(:notify_by, "Phone Call") %>
-
-  <%= radio_button_tag(:notify_day, "before") %>
-  <%= label_tag(:notify_before, "Notify me BEFORE expiration date.") %>
-
-  <%= select_tag(:notify_num, options_for_select(1..7)) %>
-  <%= select_tag(:notify_date_type, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %>
-  
-  <%= radio_button_tag(:notify_day, "adult") %>
-  <%= label_tag(:age_adult, "Notify me ON the day of expiration date.") %> <br>
-
-  <%= link_to 'Add people to notifications', '#',
-        :onclick => 'add_ppl_to_notification()' %>
-
-  <div id="add_ppl">
   </div>
 
-  <%= link_to "Back", user_added_product_path %>
-  <%= f.submit "Update Item" %> 
+  <p> Notify by: </p>
+
+  <div class = "light well">
+  
+    <%= check_box_tag(:notify_email) %>
+    <%= label_tag(:notify_email, "Email") %>
+    <%= check_box_tag(:notify_text) %>
+    <%= label_tag(:notify_text, "Text") %>
+
+    <%= radio_button_tag(:notify_day, "before") %>
+    <%= label_tag(:notify_before, "Notify me BEFORE expiration date.") %>
+
+    <%= select_tag(:notify_num, options_for_select(1..7)) %>
+    <%= select_tag(:notify_date_type, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %> <br >
+    
+    <%= radio_button_tag(:notify_day, "day_of") %>
+    <%= label_tag(:notify_date_type, "Notify me ON the day of expiration date.") %> <br>
+
+    <%= link_to 'Add people to notifications', '#',
+          :onclick => 'add_ppl_to_notification()' %>
+
+    <div id="add_ppl">
+    </div>
+  </div>
+  <%= link_to "<i class='fa fa-chevron-circle-left'></i> &nbsp;Back".html_safe, user_added_product_path, class: "btn btn-info round2" %>
+  <%= f.submit "Update Item", class: "btn btn-info round2" %> 
 
 <% end %>
 
