--- a/app/views/user_added_products/show.html.erb
+++ b/app/views/user_added_products/show.html.erb
@@ -1,42 +1,41 @@
-<h1><%= @user_product.name %> </h1>
 
-<p>Name: <%= @user_product.name %></p>
-<p>Time of Exp: <%= @user_product.number_unit_of_time %> <%= @user_product.unit_of_time_period %></p>
-<p>Storage Type : <%= @user_product.storage %></p>
-<p>Product Details: <%= @user_product.product_details %></p>
-<p>Date Added : <%= @user_product.created_at %> </p>
-<p>Expiration Date : <%= @user_product.exp_date %></p>
-
-<p>Notify Me <%= @user_product.exp_date%></p>
-<p>Notify Friends <%= @user_product.exp_date%></p>
-
-<%= form_for(@friend) do |f| %>
-  <%= f.hidden_field :user_id, :value => current_user.id %>
-  <%= f.hidden_field :user_added_product_id, :value => @user_product.id %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-  <%= f.submit %>
-<% end %>
-
-  <div class ="light well">
-
-    <h1><%= @user_product.brand %> </h1>
-
-    <p>Brand: <%= @user_product.brand %></p>
+<h1>&nbsp;<%= @user_product.name %> </h1>
+<div class ="light well">
+    <p>Product Details: <%= @user_product.product_details %></p>
     <p>Time of Exp: <%= @user_product.number_unit_of_time %> <%= @user_product.unit_of_time_period %></p>
     <p>Storage Type : <%= @user_product.storage %></p>
-    <p>Product Details: <%= @user_product.product_details %></p>
-    <p>Date Added : <%= @user_product.created_at %> </p>
-    <p>Expiration Date : <%= @user_product.exp_date %></p>
-    <p>Notification Date : <%= @user_product.notification_date %></p>
-
-    <div class="progress progress-striped active">
-      <div class="bar" style="width: 80%;"></div>
+ 
+    </div>
+    <div class ="light well">
+        <p>Date Added : <%= @user_product.created_at %> </p>
+        <p>Expiration Date : <%= @user_product.exp_date %></p>
+        
+        <div class="progress progress-striped active">
+          <div class="bar" style="width: 80%;"></div>
+        </div>
     </div>
 
-<%= link_to "Back", user_added_products_path %>
-<%= link_to "Edit", edit_user_added_product_path(@user_product) %>
-<%= link_to 'Destroy', @user_product, :confirm => 'Are you sure?', :method => :delete %>
+    <p>Notify Me <%= @user_product.exp_date%></p>
+    <p>Notify Friends <%= @user_product.exp_date%></p>
+
+    <%= form_for(@friend) do |f| %>
+      <%= f.hidden_field :user_id, :value => current_user.id %>
+      <%= f.hidden_field :user_added_product_id, :value => @user_product.id %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+      <%= f.submit %>
+    <% end %>
+
+    <div class ="light well">
+        <p>Notification Date : <%= @user_product.notification_date %></p>
+        
+    </div>
+    <%= link_to "<i class='fa fa-chevron-circle-left'></i> &nbsp;Back".html_safe, user_added_products_path, class: "btn btn-info round2" %>
+    <%= link_to "<i class='fa fa-file-text'></i> &nbsp;Edit".html_safe, edit_user_added_product_path(@user_product),class: "btn btn-info round2" %>
+    <%= link_to "<i class='fa fa-trash-o'></i> &nbsp;Destroy".html_safe, @user_product,:onclick => 'Are you sure you want to delete "#{@user_product.name}"?', method: :delete, class: "btn btn-inverse round2" %>
+  
+  </div>
+
 
