--- a/app/views/user_added_products/edit.html.erb
+++ b/app/views/user_added_products/edit.html.erb
@@ -1,7 +1,7 @@
 <h1><i class="fa fa-pencil-square-o"></i>&nbsp;<%= @user_product.name %> </h1>
 
 <%= form_for @user_product, url: {action: "update"}, html: {class: "update_form"} do |f| %>
-  <p>Date Added : <%= @user_product.created_at %> </p>
+  <div class="field">Date Added : <%= @user_product.created_at %> </div>
   
   <div class = "light well">
   
@@ -53,6 +53,20 @@
   </div>
   <%= link_to "<i class='fa fa-chevron-circle-left'></i> &nbsp;Back".html_safe, user_added_product_path, class: "btn btn-info round2" %>
   <%= f.submit "Update Item", class: "btn btn-info round2" %> 
+
+  <div class="field">
+    <h2>Recipient</h2>
+  <%= f.fields_for(:recipients, Recipient.new) do |recipient_field| %>
+     <%= recipient_field.label :name %>
+     <%= recipient_field.text_field :name %>
+     <%= recipient_field.label :email %>
+     <%= recipient_field.text_field :email %>
+     <%= recipient_field.label :phone_number %>
+     <%= recipient_field.text_field :phone_number %>
+  <% end%>
+</div>
+  <%= link_to "Back", user_added_product_path %>
+  <%= f.submit "Update Item" %> 
 
 <% end %>
 
