--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Perishab.ly</title>
-    <%= csrf_meta_tag %>
-    <%= javascript_include_tag "application" %>
-    <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= stylesheet_link_tag 'font-awesome.min.css' %>
-    <link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-  </head>  
-  <body>
-    <div id = "container">
-      <div id = "user_header">
-        <% if current_user %> 
-          <div class ="navbar navbar-fixed-top">
-            <div class ="navbar-inner">
-              Logged in as <%= current_user.email %>
-              <div class="pull-right">
-                <%= link_to "Log out", logout_path, class: "btn btn-info" %>
-              </div>
-            </div>
+<head>
+  <title>Perishab.ly</title>
+  <%= csrf_meta_tag %>
+  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= stylesheet_link_tag 'font-awesome.min.css' %>
+  <link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+  <%= stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/redmond/jquery-ui.css", "application" %>
+</head>  
+<body>
+  <div id = "container">
+    <div id = "user_header">
+      <% if current_user %> 
+      <div class ="navbar navbar-fixed-top">
+        <div class ="navbar-inner">
+          Logged in as <%= current_user.email %>
+          <div class="pull-right">
+            <%= link_to "Log out", logout_path, class: "btn btn-info" %>
           </div>
-        <% end %>
+        </div>
       </div>
+      <% end %>
+    </div>
     
     <%= render "layouts/flash_notices" %>
     
     <%= yield %>
-    </div>
+  </div>
 
-  </body>
+</body>
 </html>
