--- a/app/views/user_added_products/new.html.erb
+++ b/app/views/user_added_products/new.html.erb
@@ -43,17 +43,17 @@
     </div>
   </div>
 
-    <%= f.submit "Add Item", class: "btn btn-info round2" %>
+
 
     <%= f.label "Name:" %>
     <%= f.text_field :name, data: {autocomplete_source: Product.all.order(:name).map(&:name)} %>
     <%= f.label "Time:" %>
     <%= f.text_field :unit_of_time_period %>
-    <%= f.submit "Add Item" %> 
 
+    <%= f.label "Date of Expiration:" %>
+    <%= f.text_field :exp_date , :id => "datepicker" %>
+    <%= f.submit "Add Item", class: "btn btn-info round2" %>
 <% end %>
  
 <%= link_to "<i class='fa fa-times'></i> Cancel".html_safe, user_added_products_path, class: "btn btn-inverse round2" %>
 
-<script>
-</script>
