took out jquery rails gem bc it was very old version and it was overriding the jquery i downloaded

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,6 @@
     <%= csrf_meta_tag %>
     <%= javascript_include_tag "application" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
-    <link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-    <%= stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/redmond/jquery-ui.css", "application" %>
   </head>  
   <body>
     <div id = "container" class= "container-fluid">
@@ -49,6 +47,6 @@
 
 
     </div>
-    <footer>Perishb.ly &copy; 2014</footer>
+    <footer>Perishab.ly &copy; 2014</footer>
   </body>
 </html>
