--- a/app/views/user_added_products/show.html.erb
+++ b/app/views/user_added_products/show.html.erb
@@ -1,4 +1,4 @@
-<h1>&nbsp;<%= @user_product.name %> </h1>
+<h1>&nbsp;<%= @user_product.name.capitalize %> </h1>
 <div class ="light well">
     <p>Product Details: <%= @user_product.product_details %></p>
     <p>Time of Exp: <%= @user_product.number_unit_of_time %> <%= @user_product.unit_of_time_period %></p>
