--- a/app/views/product_notification_mailer/notification_for.html.erb
+++ b/app/views/product_notification_mailer/notification_for.html.erb
@@ -1,5 +1,5 @@
-<p><%= @product.user.name %>,</p>
+<p><%= @product.user.name.capitalize %>,</p>
 
 <p>Here is your Perishably notification</p>
 
-<p>Your <%= @product.name %> will expire on date <%= @product.exp_date.strftime("%B %d, %Y") %></p>
+<p>Your <%= @product.name.capitalize %> will expire on date <%= @product.exp_date.strftime("%B %d, %Y") %></p>
