--- a/app/views/user_added_products/new.html.erb
+++ b/app/views/user_added_products/new.html.erb
@@ -35,22 +35,26 @@
     
     <%= radio_button_tag(:notify_day, "day_of") %>
     <%= label_tag(:notify_date_type, "Notify me ON the day of expiration date.") %> <br>
-
+    <div id="add_ppl">
     <%= link_to 'Add people to notifications', '#',
           :onclick => 'add_ppl_to_notification()' %>
-
-    <div id="add_ppl">
     </div>
   </div>
+  <div class="field">
+    <h2>Recipient</h2>
+  <%= f.fields_for(:recipients, Recipient.new) do |recipient_field| %>
+     <%= recipient_field.label :name %>
+     <%= recipient_field.text_field :name %>
+     <%= recipient_field.label :email %>
+     <%= recipient_field.text_field :email %>
+     <%= recipient_field.label :phone_number %>
+     <%= recipient_field.text_field :phone_number %>
+  <% end%>
+</div>
 
     <%= f.submit "Add Item", class: "btn btn-info round2" %>
 
-    <%= f.label "Name:" %>
-    <%= f.text_field :name, data: {autocomplete_source: Product.all.order(:name).map(&:name)} %>
-    <%= f.label "Time:" %>
-    <%= f.text_field :unit_of_time_period %>
-    <%= f.submit "Add Item" %> 
-
+ 
 <% end %>
  
 <%= link_to "<i class='fa fa-times'></i> Cancel".html_safe, user_added_products_path, class: "btn btn-inverse round2" %>
