--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -30,9 +30,8 @@
       <%= f.label :phone_number %>
       <%= f.telephone_field :phone_number %>
     </div>  
-    <%= link_to " Bang", '#', class: 'fa fa-camera-retro btn btn-info round2' %>
 
-    <%= f.submit(content_tag(:i, "Bang").html_safe, :class => "btn btn-info round2")%>
+    <%= f.submit("Sign In", :class => "btn btn-info round2")%>
     
   <% end %>
 
