--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
  *= require bootstrap
  *= require bootstrap.min 
  *= require style
+ *= require Redmond
  *= require font-awesome
  *= require perishably
  */
