--- a/app/views/user_added_products/new.html.erb
+++ b/app/views/user_added_products/new.html.erb
@@ -13,7 +13,7 @@
         <%= f.select(:number_unit_of_time, options_for_select(1..20)) %> 
 
         <%= f.label :unit_of_time_period, "Unit of Time:" %>
-        <%= f.select(:unit_of_time_period, options_for_select(["Day", "Week", "Month", "Year" ])) %> <br> 
+        <%= f.select(:unit_of_time_period, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %> <br> 
 
     		<%= f.label "Date of Expiration:" %>
     		<%= f.text_field :exp_date , :id => "datepicker" %>
