--- a/app/views/user_added_products/new.html.erb
+++ b/app/views/user_added_products/new.html.erb
@@ -17,7 +17,7 @@
 
     		<%= f.label "Date of Expiration:" %>
             <%#= link_to "Product has it's own expiration date",id: "ownExpDate" %>
-    		<%= f.text_field :exp_date , :id => "expDate" %> <i class="fa fa-calendar"></i>
+    		<%= f.text_field :exp_date , :id => "datepicker" %> <!-- <img src="fa-calendar.png" /> -->
         
         <%= f.label :storage, "Storage:" %>
     	<%= f.text_field :storage %>
