--- a/app/views/user_added_products/new.html.erb
+++ b/app/views/user_added_products/new.html.erb
@@ -31,12 +31,11 @@
     <%= f.check_box(:sms) %>
     <%= f.label(:sms, "Notify me by text message") %>
 
-    <%#= radio_button_tag(:day_of) %>
-    <%#= label_tag(:day_of, "Notify me on the day of expiration") %> <br>
-
+    <%#= radio_button_tag(:notify_day) %>
+    <%#= label_tag(:day_of, "Notify me on the expiration date.") %> <br>
 
     <%#= radio_button_tag(:notify_day, "before") %>
-    <%#= label_tag(:notify_before, "Notify me BEFORE expiration date.") %>
+    <%#= label_tag(:notify_before, "Notify me BEFORE the expiration date.") %>
 
     <%#= select_tag(:notify_num, options_for_select(1..7)) %>
     <%#= select_tag(:notify_date_type, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %> <br >
